Fix section overflow issue

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,5 +1,4 @@
 .layout {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     min-height: 100vh;
 }
